# dionysus-metacog

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: adapter-compatibility-matrix.md  adapter-pipeline.md  cross-package-boundary-map.md  dispatch-protocol.md  source-inventory.md  thoughtseed-attractor-map.md
examples/: README.md  __init__.py  elume_to_sakshi.py  host_runtime_pipeline.py  linoss_state_input.py
src/dionysus_metacog/: __init__.py
src/dionysus_metacog/adapters/: __init__.py
src/dionysus_metacog/adapters/autonoesis/: __init__.py
src/dionysus_metacog/adapters/elume/: __init__.py
src/dionysus_metacog/adapters/hermes/: __init__.py
src/dionysus_metacog/adapters/linoss/: __init__.py
src/dionysus_metacog/adapters/sakshi/: __init__.py
src/dionysus_metacog/attractors/: __init__.py
src/dionysus_metacog/core/: __init__.py
src/dionysus_metacog/framework/: __init__.py
src/dionysus_metacog/models/: __init__.py
src/dionysus_metacog/provenance/: __init__.py
tests/: test_active_inference_control.py  test_adapter_compatibility_fixtures.py  test_adapter_composition.py  test_attractor_assessment.py  test_attractor_blanket_context.py  test_attractor_lifecycle.py  test_attractor_sources.py  test_autonoesis_adapter.py  test_dispatch.py  test_elume_adapter.py  test_examples.py  test_framework_layers.py  test_imports.py  test_linoss_adapter.py  test_metacog_payload.py  test_provenance_ledger.py  test_sakshi_adapter.py
tests/fixtures/: __init__.py  adapter_contracts.py
